--- a/xxl-job-admin/src/main/resources/xxl-job-admin.properties
+++ b/xxl-job-admin/src/main/resources/xxl-job-admin.properties
@@ -1,16 +1,16 @@
 ### xxl-job db  (use &amp; replace & in xml)
 xxl.job.db.driverClass=com.mysql.jdbc.Driver
-xxl.job.db.url=jdbc:mysql://localhost:3306/xxl-job?useUnicode=true&characterEncoding=UTF-8
-xxl.job.db.user=root
-xxl.job.db.password=root_pwd
+xxl.job.db.url=jdbc:mysql://mysql.csucjh.com:6033/csucjh?useUnicode=true&characterEncoding=UTF-8
+xxl.job.db.user=csucjh
+xxl.job.db.password=csucjh
 
 ### xxl-job email
-xxl.job.mail.host=smtp.163.com
+xxl.job.mail.host=mailteam@qq.com
 xxl.job.mail.port=25
 xxl.job.mail.ssl=false
-xxl.job.mail.username=ovono802302@163.com
-xxl.job.mail.password=asdfzxcv
-xxl.job.mail.sendNick=《任务调度平台XXL-JOB》
+xxl.job.mail.username=2677484410@qq.com
+xxl.job.mail.password=zliibuuncdafechg
+xxl.job.mail.sendNick=《任务调度平台XXL-JOB(CSU)》
 
 ### xxl-job login
 xxl.job.login.username=admin
